# camara-audit

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
camara_audit/: cli.py
camara_audit/analyzers/: jwt_pii.py  jwt_signature.py
camara_audit/core/: authorization.py  engagement.py  jwt_tools.py  jwt_verify.py  models.py  rate_limit.py  storage.py
camara_audit/plugins/: base.py  device_location_accuracy_floor.py  number_verification_enumeration.py  sim_swap_rate_limit.py  token_endpoint_security.py
camara_audit/reports/: dashboard.py  terminal.py
tests/: test_camara_audit.py
tests/fixtures/mock_gateway/: device_location_server.py  jwks_server.py  number_verification_server.py  server.py  sim_swap_server.py
tests/fixtures/mock_gateway/certs/: cert.pem  key.pem
