[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camara-audit"
version = "0.3.0"
description = "Authorized security auditing for CAMARA / GSMA Open Gateway APIs"
requires-python = ">=3.11"
dependencies = ["click>=8.1.0", "rich>=13.7.0", "pyyaml>=6.0.1", "requests>=2.31.0"]

[project.scripts]
camara-audit = "camara_audit.cli:main"

[tool.setuptools.packages.find]
include = ["camara_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
